[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/dialog.tres" type="DynamicFont" id=1]
[ext_resource path="res://textures/misc/dialog_box.png" type="Texture" id=2]
[ext_resource path="res://textures/house_inside.png" type="Texture" id=3]
[ext_resource path="res://scenes/levels/menu.gd" type="Script" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
initial_level = "res://scenes/levels/outside.tscn"

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.721
margin_top = -248.604
margin_right = 242.279
margin_bottom = -85.6037
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = 47.9168
margin_right = 57.5
margin_bottom = 96.9168
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.364706, 0.364706, 0.364706, 1 )
text = "New Game"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.5
margin_top = 123.626
margin_right = 50.5
margin_bottom = 172.626
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_disabled = Color( 0.780392, 0.780392, 0.780392, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.364706, 0.364706, 0.364706, 1 )
disabled = true
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -114.361
margin_top = 234.378
margin_right = -13.3615
margin_bottom = 283.378
custom_fonts/font = ExtResource( 1 )
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
